fix(app-routes): bug fixes
