# admin-service/controllers/app_controller.go
@@ -27,6 +27,20 @@ func NewAppController(ts services.AppService) AppController {
 	return &appController{ts}
 }
 
+// App godoc
+//
+//	@Summary		Register app
+//	@Description	Register app
+//	@Tags			App
+//	@Accept					json
+//	@Produce		json
+//	@Param					app	body		models.AppRequest	true	"Regsiter app"
+//	@Success		200	{object}	models.AppResponse
+//	@Failure		400	{object}	models.Error
+//
+// @Security 		ApiKeyAuth
+//
+//	@Router			/v1/app/registerapp [post]
 func (ac *appController) RegisterApp(c echo.Context) error {
 	user, err := utils.GetUserDetails(c)
 	if err != nil {
@@ -43,22 +57,46 @@ func (ac *appController) RegisterApp(c echo.Context) error {
 	return middlewares.Responder(c, http.StatusOK, res)
 }
 
+// App godoc
+//
+//	@Summary		Register rule
+//	@Description	Register rule
+//	@Tags			App
+//	@Accept					json
+//	@Produce		json
+//	@Param					rule	body		models.RuleRequest	true	"Regsiter app"
+//	@Success		200	{object}	models.AppResponse
+//	@Failure		400	{object}	models.Error
+//
+// @Security 		ApiKeyAuth
+//
+//	@Router			/v1/app/registerrule [post]
 func (ac *appController) RegisterRule(c echo.Context) error {
-	_, err := utils.GetUserDetails(c)
-	if err != nil {
-		return middlewares.Responder(c, http.StatusBadRequest, "Invalid User")
-	}
 	request := new(models.RuleRequest)
 	if err := c.Bind(request); err != nil {
 		return middlewares.Responder(c, http.StatusBadRequest, "Bad Request")
 	}
-	err = ac.as.AddAppRule(*request)
+	err := ac.as.AddAppRule(request)
 	if err != nil {
 		return middlewares.Responder(c, http.StatusBadRequest, "Error Occured")
 	}
 	return middlewares.Responder(c, http.StatusOK, "Success")
 }
 
+// App godoc
+//
+//	@Summary		Update rule
+//	@Description	Update rule
+//	@Tags			App
+//	@Accept					json
+//	@Produce		json
+//	@Param					rule	body		models.RuleRequest	true	"updated rule"
+//	@Param					id	path		string	true	"rule id"
+//	@Failure		400	{object}	models.Error
+//
+// @Security 		ApiKeyAuth
+//
+//	@Router			/v1/app/updaterule/{id} [put]
 func (ac *appController) UpdateRule(c echo.Context) error {
 	_, err := utils.GetUserDetails(c)
 	if err != nil {
@@ -77,6 +115,19 @@ func (ac *appController) UpdateRule(c echo.Context) error {
 	return middlewares.Responder(c, http.StatusOK, "Success")
 }
 
+// App godoc
+//
+//	@Summary		Get rules
+//	@Description	Get rules
+//	@Tags			App
+//	@Accept					json
+//	@Produce		json
+//	@Param					id	path		string	true	"app id"
+//	@Failure		400	{object}	models.Error
+//
+// @Security 		ApiKeyAuth
+//
+//	@Router			/v1/app/getrules/{id} [get]
 func (ac *appController) GetRules(c echo.Context) error {
 	_, err := utils.GetUserDetails(c)
 	if err != nil {
@@ -91,6 +142,19 @@ func (ac *appController) GetRules(c echo.Context) error {
 	return middlewares.Responder(c, http.StatusOK, res)
 }
 
+// App godoc
+//
+//	@Summary		Delete rules
+//	@Description	Delete rules
+//	@Tags			App
+//	@Accept					json
+//	@Produce		json
+//	@Param					id	path		string	true	"rule id"
+//	@Failure		400	{object}	models.Error
+//
+// @Security 		ApiKeyAuth
+//
+//	@Router			/v1/app/deleterule/{id} [delete]
 func (ac *appController) DeleteRule(c echo.Context) error {
 	_, err := utils.GetUserDetails(c)
 	if err != nil {
